# Mr.Fizzle

Code/: PIDNN.txt
Code/BC25单模块资料/08_尺寸图/: BC28转接板脚位图.PcbDoc
Code/显示屏/Test_LVGL_WiFi_Timer_end-master/: README.md
Code/显示屏/Test_LVGL_WiFi_Timer_end-master/Test_LVGL_/lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Code/显示屏/Test_LVGL_WiFi_Timer_end-master/Test_LVGL_/lib/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_light.c  ui_comp_light.h  ui_comp_navigation_bar.c  ui_comp_navigation_bar.h  ui_comp_panel1.c  ui_comp_panel1.h  ui_comp_sensor_panel.c  ui_comp_sensor_panel.h  ui_comp_user_panel.c  ui_comp_user_panel.h
Code/显示屏/Test_LVGL_WiFi_Timer_end-master/Test_LVGL_/lib/ui/images/: ui_img_1199486407.c  ui_img_1208893048.c  ui_img_128x130_png.c  ui_img_144205808.c  ui_img_1530590678.c  ui_img_1551580766.c  ui_img_1574887283.c  ui_img_162118600.c  ui_img_394011210.c  ui_img_547817801.c  ui_img_964567643.c  ui_img_arrow_right_16x16_png.c  ui_img_bg300_png.c  ui_img_btn_main_off_80x32_png.c  ui_img_btn_main_on_80x32_png.c  ui_img_button32x32_png.c  ui_img_tvoc_png.c  ui_img_wifi_128x160_png.c  ui_img_wifi_16x16_001_png.c
Code/显示屏/Test_LVGL_WiFi_Timer_end-master/Test_LVGL_/lib/ui/screens/: ui_Screen1.c
PCB/: newlib.PrjPcb
PCB-完善/: Sheet1.SchDoc
太阳能转换器/STM32 12864C/STM32 12864C/: README.TXT
太阳能转换器/太阳能充放电模块V2PCB带上12864C/太阳能充放电模块V2/: 充放电模块V2.PcbDoc.htm  充放电模块V2.PrjPCB  充放电模块V2.PrjPCBStructure  充放电模块V2.SchDoc
程冰林三表/: 程冰林-毕业开题报告.doc  程冰林-毕业设计任务书.doc  程冰林-题目申报表.docx
(+299 files in other folders)
